<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Cardation</string>

    <!-- main screen -->
    <string name="button_input">Input</string>
    <string name="button_learn">Learn</string>

    <string name="deck_prompt">Choose a deck</string>
 
    <!-- input screen -->
    <string name="recto">recto</string>
    <string name="verso">verso</string>
    <string name="button_save">Save</string>
    <string name="checkbox_active">active</string>

    <!-- learn screen -->
    <string name="clue">clue</string>
    <string name="answer">answer</string>
    <string name="quote">quote</string>
    <string name="info_edit_text">info</string>
    <string name="cram_up">+</string>
    <string name="cram_down">-</string>
    <string name="go_back">previous word</string>

    <!-- list screen -->
    <string name="search">search</string>

    <!-- edit screen -->

    <!-- decram screen -->
    <string name="decram_info_text">This is what your date-due distribution will look like if you press Commit.</string>

    <!-- backup & restore buttons -->
    <string name="button_backup">Backup</string>
    <string name="button_restore">Restore</string>

    <string name="button_delete">Delete</string>

    <!-- configure screen -->
    <string name="button_config">Configure</string>
    <string name="rand_reversal_up">+</string>
    <string name="rand_reversal_down">-</string>
    <string name="batchsize_up">+</string>
    <string name="batchsize_down">-</string>
    <string name="streak_up">+</string>
    <string name="streak_down">-</string>


    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_input">Input</string>
    <string name="title_activity_list_all">Search</string>
    <string name="title_activity_dbexplorer">Hack Database (danger!)</string>
    <string name="title_activity_edit">Edit</string>
    <string name="title_activity_learn">Learn</string>
    <string name="title_activity_restore">Restore</string>
    <string name="title_activity_decram">Decram</string>
    <string name="title_activity_config">Configure</string>
    <string name="title_activity_stats">Statistics</string>
    <string name="title_activity_dbbk">Cardation importer</string>

</resources>
