<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity" >

<EditText android:id="@+id/clue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/clue" />    

<EditText android:id="@+id/answer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/answer" />

<EditText android:id="@+id/quote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/quote" />

<CheckBox
    android:id="@+id/activeCheckBox"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/checkbox_active" />

<!-- Save button -->
<Button
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:onClick="save"
    android:text="@string/button_save" />

</LinearLayout>
