<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="fill"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <Spinner
        android:id="@+id/deck_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:prompt="@string/deck_prompt" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="learn"
        android:text="@string/button_learn" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="inputCard"
        android:text="@string/button_input" />
    
</LinearLayout>
