<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity" >

<EditText android:id="@+id/clue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/clue" />    

<EditText android:id="@+id/answer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/answer" />

<EditText android:id="@+id/quote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/quote" />

<CheckBox
    android:id="@+id/activeCheckBox"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/checkbox_active" />

<EditText
    android:id="@+id/infoEditText"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:ems="10"
    android:text="@string/info_edit_text"
    android:inputType="textMultiLine" >
</EditText>

<RadioGroup
    android:id="@+id/know_radio_group"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:orientation="horizontal" >

    <RadioButton
        android:id="@+id/know_button_no"
        android:button="@drawable/no_button"
        android:background="@drawable/no_button"
        android:foreground="@color/black"
        android:layout_width="60dp"
        android:layout_height="40dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="no"
        android:onClick="onRadioButtonClicked" />

    <RadioButton
        android:id="@+id/know_button_meh"
        android:button="@drawable/meh_button"
        android:background="@drawable/meh_button"
        android:foreground="@color/black"
        android:layout_width="60dp"
        android:layout_height="40dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="meh"
        android:onClick="onRadioButtonClicked" />

    <RadioButton
        android:id="@+id/know_button_yes"
        android:button="@drawable/yes_button"
        android:background="@drawable/yes_button"
        android:foreground="@color/black"
        android:layout_width="60dp"
        android:layout_height="40dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="yes"
        android:onClick="onRadioButtonClicked" />

</RadioGroup>

<!-- home-made NumberPicker, Cram -->
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

<TextView
    android:text="Cram"
    android:editable="false"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" />

<Button
    android:id="@+id/cramDownButton"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:onClick="cramDown"
    android:text="@string/cram_down" />

<TextView
    android:id="@+id/cramText"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" />

<Button
    android:id="@+id/cramUpButton"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:onClick="cramUp"
    android:text="@string/cram_up" />

</LinearLayout>

</LinearLayout>
